# email-triage-env

./: Dockerfile  README.md  SUBMISSION.md  app.py  baseline_inference.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py  environment.py
