[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "0.1.0"
dependencies = [
    "requests",
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0",
    "pydantic",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["app", "graders", "models", "inference"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.openenv]
entrypoint = "server.app:app"
tasks = [
    {id = "classify_urgency", name = "Classify Email Urgency", grader = "graders:classify_urgency_grader"},
    {id = "choose_action", name = "Choose Email Action", grader = "graders:choose_action_grader"},
    {id = "draft_response", name = "Draft Email Response", grader = "graders:draft_response_grader"},
]
