[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "0.1.0"
dependencies = [
    "requests",
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:app"

[tool.openenv]
entrypoint = "inference:run"

[tool.openenv.graders]
classify_urgency = "graders:classify_urgency_grader"
choose_action = "graders:choose_action_grader"
draft_response = "graders:draft_response_grader"
